所有文件提交

--- a/pages/customIndex/customIndex.wxml
+++ b/pages/customIndex/customIndex.wxml
@@ -1,2 +1,8 @@
 <!--pages/customIndex/customIndex.wxml-->
 <!-- <text>pages/customIndex/customIndex.wxml</text> -->
+
+<map class='myMap'>
+  <view class='myView' style='backgroundColor:red'>
+
+  </view>
+</map>
