--- a/pages/customIndex/customIndex.wxss
+++ b/pages/customIndex/customIndex.wxss
@@ -1,1 +1,16 @@
 /* pages/customIndex/customIndex.wxss */
+
+page {
+  height: 100%;
+  width: 100%
+}
+
+.myMap {
+  height: 100%;
+  width: 100%
+}
+
+.myView{
+  height: 100px;
+  width: 100px
+}
